fix overlay scolling problem on iOS

--- a/source/style/driveOverlay.less
+++ b/source/style/driveOverlay.less
@@ -21,9 +21,7 @@ SOFTWARE.
 */
 
 #driveOverlay {
-  position:relative;
-  top:0%;
-  left:0%;
+  position: absolute;
   width:100%;
   height:100%;
   background-color: lightgreen; //#66BB6A;
@@ -58,8 +56,8 @@ SOFTWARE.
 }
 
 .drive-diagnostics {
+    position:absolute;
   font-family: 'helvetica';
-  position:absolute;
   left:calc(~'50% - 150px');
   top:200px;
 }
